# autotag

./: README.md  eslint.config.js  index.html  package-lock.json  package.json
scripts/: check-cargo.mjs
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: amazon.rs  cover_art.rs  deezer.rs  discogs.rs  filename_catalog.rs  filename_clean.rs  lib.rs  library_db.rs  main.rs  metadata.rs  models.rs  musicbrainz.rs  options.rs  rekordbox_xml.rs  scoring.rs  smart_lookup.rs  spotify.rs  youtube.rs
src/api/: tauri.ts
src/components/: ApplyDonePanel.tsx  CleanFilenamesPage.tsx  LoadingOverlay.tsx  Logo.tsx  OptionsMenu.tsx  RekordboxXmlPage.tsx  ReviewDeck.tsx  ReviewToolbar.tsx
src/hooks/: useAutotagSession.ts  useLookupActions.ts  useLookupEvents.ts  useProgressEvents.ts
src/options/: defaults.ts  presets.ts  storage.ts  types.ts
src/utils/: confidence.ts  parse.ts  scrollRestore.ts
