[package]
name = "autotag"
version = "0.1.0"
description = "Music library metadata autotag tool"
authors = ["you"]
edition = "2021"

[lib]
name = "autotag_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
lofty = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time", "sync", "macros", "rt-multi-thread"] }
regex = "1"
quick-xml = "0.37"
url = "2"
encoding_rs = "0.8"
